<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/strDashboard"/>

    </group>

    <item android:title="@string/strOther">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/strAbout"/>
                <item
                    android:id="@+id/nav_credits"
                    android:icon="@drawable/ic_credits"
                    android:title="@string/strCredits"/>
            </group>
        </menu>
    </item>

</menu>