<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:title="@string/strSearch"
            app:showAsAction="always"
            app:actionViewClass="androidx.appcompat.widget.SearchView" />
        <item
            android:id="@+id/sort"
            android:icon="@drawable/ic_sort"
            android:title="@string/strSort"
            app:showAsAction="always" />

        <item
            android:id="@+id/deleteAll"
            android:icon="@drawable/ic_delete"
            android:title="@string/StrDelete_all_records"
            app:showAsAction="always" />

    </group>
</menu>