<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_background"
    tools:context=".Pages.EditPet">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/orange"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="Edit Pet Info"
        app:titleTextColor="@color/white"
        app:menu="@menu/update_menu"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <com.blogspot.atifsoftwares.circularimageview.CircularImageView
                android:id="@+id/editPetPic"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_image"
                app:c_border="true"
                app:c_border_width="1dp"
                app:c_border_color="@color/black" />

            <TextView
                android:id="@+id/personal_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/pet_informationLabel"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editBreed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/breed"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/sex"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:id="@+id/sexRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="90dp"
                android:layout_marginBottom="5dp">
                <RadioButton
                    android:id="@+id/femaleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textSize="15sp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"/>
                <RadioButton
                    android:id="@+id/maleRB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="15sp"/>
            </RadioGroup>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="7"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editBdate"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/birthdate"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="3"
                    app:boxBackgroundColor="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/EditAge"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:hint="@string/age"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editWeight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/weight"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/health_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/health_informationLabel"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/allergies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/allergies"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/medication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/medications"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vetName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vet_name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="6dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxBackgroundColor="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/vetContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vet_contact"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>