<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@drawable/yellow_background">

    <ImageView
        android:id="@+id/launcher"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/navigation_header"
        android:src="@drawable/tffi_logo" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="141dp"
        android:layout_toEndOf="@+id/launcher"
        android:text="@string/app"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appName"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="-145dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="79dp"
        android:layout_toEndOf="@+id/launcher"
        android:text="Pet Feeder"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/launcher"
        android:layout_alignStart="@+id/launcher"
        android:layout_alignEnd="@+id/launcher"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="25dp"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        android:textStyle="bold" />


</RelativeLayout>